<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/label_disconnect_button" />

    <Button
        android:id="@+id/button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/label_connect_button" />


    <Button
        android:id="@+id/button_synch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_disconnect"
        android:layout_marginTop="20dp"
        android:text="@string/label_synch" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_synch"
        android:layout_marginTop="20dp"
        android:text="@string/label_TX_button" />


    <TextView
        android:id="@+id/label_RX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_send"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_RX_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />


    <EditText
        android:id="@+id/message_TX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button_send"
        android:hint="@string/label_TX_data"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/message_RX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_RX"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:hint="@string/label_RX_data"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
